--- a/content/login.html
+++ b/content/login.html
@@ -40,10 +40,10 @@
 							<span id="login_err" class="sty_txt2"></span>
 						</div>
 						<div>
-							用户名：<input type="text" name="username" class="username" id="username" />
+							用户名：<input type="text" name="username" class="username" id="username" value= "admin"/>
 						</div>
 						<div>
-							密&nbsp;&nbsp;&nbsp;&nbsp;码：<input type="password" name="password" class="pwd" id="password" />
+							密&nbsp;&nbsp;&nbsp;&nbsp;码：<input type="password" name="password" class="pwd" id="password" value= "admin"/>
 						</div>
 						<div id="btn_area">
 							<input type="button" class="login_btn" id="login_sub" value="登  录">
